# trustflow-capsule-manager

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  env.sh  sgx2-ubuntu.sh
.circleci/: config.yml
capsule-manager/: Cargo.toml
capsule-manager-sdk/: .gitignore  README.md
capsule-manager-sdk/python/: .gitignore  dev-requirements.txt  env.sh  pytest.ini  requirements.txt  setup.py
capsule-manager-sdk/python/cli/: cli-template.yaml  cms.py  cms_config.py  cms_util.py  vote-request-template.yaml  voter-template.yaml
capsule-manager-sdk/python/sdc/: capsule_manager_frame.py  error.py
capsule-manager-sdk/python/sdc/crypto/: asymm.py  symm.py
capsule-manager-sdk/python/sdc/util/: constants.py  crypto.py  file.py  tool.py
capsule-manager-sdk/python/tests/: test_capsule_manager.py
capsule-manager-sdk/python/tests/crypto/: test_asymm.py  test_symm.py
capsule-manager-sdk/python/tests/util/: mock_capsule_manager.py  test_util.py
capsule-manager-tonic/: Cargo.toml  build.rs
capsule-manager-tonic/src/: lib.rs
capsule-manager/src/: config.rs  lib.rs  main.rs  server.rs
capsule-manager/src/common/: constants.rs
capsule-manager/src/config/: config.rs  mod.rs
capsule-manager/src/core/: mod.rs  model.rs  policy_enforcer.rs
capsule-manager/src/core/model/: policy.rs  request.rs
capsule-manager/src/error/: errors.rs  macros.rs  mod.rs
capsule-manager/src/remote_attestation/: constant.rs  mod.rs  unified_attestation_wrapper.rs
capsule-manager/src/server/: constant.rs  key_management_impl.rs  policy_management_impl.rs  ra_impl.rs
capsule-manager/src/storage/: in_memory_storage.rs  mod.rs  sql_storage.rs  storage_engine.rs
capsule-manager/src/storage/sql_storage/: README.md  cm.sql
capsule-manager/src/storage/sql_storage/entities/: data_key.rs  data_meta.rs  mod.rs  prelude.rs  rules.rs
capsule-manager/src/utils/: crypto.rs  json_merger.rs  log.rs  mod.rs  scheme.rs  tool.rs  type_convert.rs
capsule-manager/src/utils/jwt/: jwa.rs  jwe.rs  jws.rs  mod.rs
capsule-manager/src/utils/serde_custom/: byte_sequence.rs  format_string.rs  jwe_header.rs  jws_header.rs  mod.rs
deployment/: Dockerfile  build.sh  entrypoint.sh  occlum.Dockerfile  production.Dockerfile  publish.sh  sim.Dockerfile
deployment/conf/: Occlum_sgx2.json  unified_attestation.json
docker/: ubuntu.Dockerfile
script/: .gitignore  Occlum.json  build.sh  build_occlum.sh  install_attestation_lib.sh  server.ext
script/conf/: config.yaml
second_party/remote-attestation/: Cargo.toml  build.rs  compile.sh
second_party/remote-attestation/src/: lib.rs
second_party/remote-attestation/src/ua_gen/: c_binding_ua_gen.rs
second_party/remote-attestation/src/ua_val/: c_binding_ua_val.rs
