[package]
name = "capsule_manager_tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11"
prost-types = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
prost-wkt = "0.4"
prost-wkt-types = "0.4"

[build-dependencies]
tonic-build = "0.9.2"
prost-wkt-build = "0.4"
