[package]
name = "capsule_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
production = []

[dependencies]
capsule_manager_tonic = { path = "../capsule-manager-tonic" }
remote_attestation = { path = "../second_party/remote-attestation", features=["ua_gen"]}
clap = { version = "3.x", features = ["derive"]}
merge = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
log4rs = "1.0.0"
tonic = { version = "0.9.2", features = ["tls"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
indoc = "2"
thiserror = "1.0.25"
once_cell = "1.18.0"
openssl-sys = "0.9"
openssl =  { version = "0.10"}
pem-rfc7468 = { version="0.7.0", features=["alloc"]}
serde_json = "1.0.104"
base64 = "0.21.2"
prost = "0.11"
prost-types = "0.11.1"
chrono = { version = "0.4.26", feaures = ["serde"] }
rhai = { version = "1.5.0", features = [
  "sync",
  "only_i32",
  "no_function",
  "no_float",
  "no_optimize",
  "no_module",
  "serde",
  "unchecked",
] }
hex = "0.4.3"
base32 = "0.4.0"
lazy_static = "1.4.0"
uuid = { version = "1.4.1", feaures = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
serde_test = "1.0"
assert-json-diff = "2.0.2"
