[package]
name = "remote_attestation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
   "ua_gen",
   "ua_val"
]
ua_gen = []
ua_val = []

[dependencies]
serde_derive = "1.0.130"
serde = "1.0.117"
serde_json = "1.0.59"